--- a/source/StopWatch/StopWatch.csproj
+++ b/source/StopWatch/StopWatch.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Helpers\JiraKeyHelpers.cs" />
     <Compile Include="Helpers\StringHelpers.cs" />
     <Compile Include="Jira\DTO\JiraConfiguration.cs" />
+    <Compile Include="Jira\DTO\Worklogs.cs" />
     <Compile Include="Logging\Logger.cs" />
     <Compile Include="UI\AboutForm.cs">
       <SubType>Form</SubType>
