+ backup timer save to settings

--- a/source/StopWatch/App.config
+++ b/source/StopWatch/App.config
@@ -81,6 +81,9 @@ limitations under the License.
             <setting name="IncludeProjectName" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="BackupTimer" serializeAs="String">
+                <value>00:00:00</value>
+            </setting>
         </StopWatch.Properties.Settings>
     </userSettings>
 </configuration>
