--- a/source/StopWatch/Properties/Settings.settings
+++ b/source/StopWatch/Properties/Settings.settings
@@ -56,5 +56,8 @@
     <Setting Name="IncludeProjectName" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="BackupTimer" Type="System.TimeSpan" Scope="User">
+      <Value Profile="(Default)">00:00:00</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
