* run on startup settings

--- a/source/StopWatch/Properties/Settings.settings
+++ b/source/StopWatch/Properties/Settings.settings
@@ -59,5 +59,8 @@
     <Setting Name="BackupTimer" Type="System.TimeSpan" Scope="User">
       <Value Profile="(Default)">00:00:00</Value>
     </Setting>
+    <Setting Name="RunOnStartup" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
