--- a/source/StopWatch/App.config
+++ b/source/StopWatch/App.config
@@ -84,6 +84,9 @@ limitations under the License.
             <setting name="BackupTimer" serializeAs="String">
                 <value>00:00:00</value>
             </setting>
+            <setting name="RunOnStartup" serializeAs="String">
+                <value>True</value>
+            </setting>
         </StopWatch.Properties.Settings>
     </userSettings>
 </configuration>
